--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ html {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 100% 50%; /* Changed to red */
+    --primary: 203 92% 55%; /* #2070a9 */
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
@@ -67,7 +67,7 @@ html {
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 100% 50%; /* Changed to red */
+    --primary: 211 79% 39%; /* #2070a9 */
     --primary-foreground: 0 0% 9%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
